# finetune-mcp-agent

./: .gitignore  README.md  bedrock_test.py  datagen.py  pyproject.toml  setup_tools.py  ssh_runner.py  training_tools.py
finetune_agent_mcp/: job_state.py  server.py
finetune_agent_mcp/tools/: data_tools.py  eval_tools.py  ship_tools.py  training_tools.py
scripts/: data_preparation.py  dataset_generator_bedrock.py  finetune_qlora.py  merge_and_push.py
tests/: test_tools.py
