[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetune-agent-mcp"
version = "0.1.0"
description = "An MCP server that lets Claude orchestrate the full LLM fine-tuning pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "llm", "fine-tuning", "qlora", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "huggingface_hub>=0.22.0",
    "wandb>=0.16.0",
]
data = [
    "boto3>=1.34.0",
]
all = [
    "finetune-agent-mcp[training]",
    "finetune-agent-mcp[data]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
finetune-agent-mcp = "finetune_agent_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourname/finetune-agent-mcp"
Repository = "https://github.com/yourname/finetune-agent-mcp"
Issues = "https://github.com/yourname/finetune-agent-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["finetune_agent_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
